@@ -91,6 +91,7 @@ enum class ConfigBlockOption {
 	DECODER,
 	INPUT,
 	INPUT_CACHE,
+	ARCHIVE_PLUGIN,
 	PLAYLIST_PLUGIN,
 	RESAMPLER,
 	AUDIO_FILTER,
