@@ -2,6 +2,8 @@ ver 0.24 (not yet released)
 * protocol
   - "playlistfind"/"playlistsearch" have "sort" and "window" parameters
   - filter "prio" (for "playlistfind"/"playlistsearch")
+* archive
+  - add option to disable archive plugins in mpd.conf
 * player
   - add option "mixramp_analyzer" to scan MixRamp tags on-the-fly
 * tags
